; ModuleID = '/home/carl/AnghaBench/reactos/win32ss/user/ntuser/extr_object.c_get_user_full_handle.c'
source_filename = "/home/carl/AnghaBench/reactos/win32ss/user/ntuser/extr_object.c_get_user_full_handle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @get_user_full_handle(i32 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i64 %1, i64* %5, align 8
  %7 = load i64, i64* %5, align 8
  %8 = trunc i64 %7 to i32
  %9 = ashr i32 %8, 16
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %2
  %12 = load i64, i64* %5, align 8
  store i64 %12, i64* %3, align 8
  br label %24

13:                                               ; preds = %2
  %14 = load i32, i32* %4, align 4
  %15 = load i64, i64* %5, align 8
  %16 = call i32 @handle_to_entry(i32 %14, i64 %15)
  store i32 %16, i32* %6, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %20, label %18

18:                                               ; preds = %13
  %19 = load i64, i64* %5, align 8
  store i64 %19, i64* %3, align 8
  br label %24

20:                                               ; preds = %13
  %21 = load i32, i32* %4, align 4
  %22 = load i32, i32* %6, align 4
  %23 = call i64 @entry_to_handle(i32 %21, i32 %22)
  store i64 %23, i64* %3, align 8
  br label %24

24:                                               ; preds = %20, %18, %11
  %25 = load i64, i64* %3, align 8
  ret i64 %25
}

declare dso_local i32 @handle_to_entry(i32, i64) #1

declare dso_local i64 @entry_to_handle(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
